<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fotoland</string>

    <string name="label_open">Open</string>
    <string name="label_close">Close</string>

    <string name="label_menu_item_myAccount">My account</string>
    <string name="label_menu_item_home">Home</string>
    <string name="label_menu_item_myOrders">My orders</string>
    <string name="label_menu_item_prices">Prices</string>
    <string name="label_menu_item_faq">FAQ</string>
    <string name="label_menu_item_contact">Contact</string>

    <string name="name_product_prints">Prints</string>
    <string name="name_product_posters">Posters</string>
    <string name="name_product_canvas">Canvas</string>
    <string name="name_product_photobook">Photobook</string>
    <string name="name_product_extra">Extra</string>

    <string name="name_item_regular">Regular</string>
    <string name="description_item_regular">multiple sizes</string>
    <string name="name_item_square">Square</string>
    <string name="description_item_square">10x10 cm</string>
    <string name="name_item_vintage">Vintage</string>
    <string name="description_item_vintage">10x13 cm</string>
    <string name="label_select">Select</string>
    <string name="label_1_offer">Order your photo prints for FREE!</string>
    <string name="label_2_offer">Fotoland prints and deliver them worldwide!</string>
    <string name="label_3_offer">What do I get for FREE?</string>
    <string name="label_4_offer">Up to 30 free prints 10x15 cm by month ( one photo by print )</string>
    <string name="label_5_offer">What do I pay for?</string>
    <string name="label_6_offer">aditional 10x15 cm prints\nother prints sizes\nother products\nshipping and processing</string>
    <string name="label_next">next</string>
    <string name="label_choose_paper_type">Choose your paper type:</string>
    <string name="label_choose_photo_size">Choose your photo size:</string>
    <string name="label_order_more_prints">Order more prints and pay less</string>

    <string name="unit_price">Unit price</string>
    <string name="pieces_100">100+</string>
    <string name="pieces_250">250+</string>
    <string name="pieces_500">500+</string>
    <string name="pieces_1000">1000+</string>
    <string name="label_select_pictures">Select Pictures</string>

    <string name="paper_classic">Paper</string>
    <string name="canvas">Canvas</string>
    <string name="paper_glossy">Glossy</string>
    <string name="paper_matte">Matte</string>

    <string name="permission_details_external_storage">We need this permission to display local photos</string>
    <string name="permission_denied">We do not have permission to continue</string>
    <string name="title_tabPhotos_phone">Phone</string>
    <string name="title_tabPhotos_facebook">Facebook</string>
    <string name="title_sceen_selectPhotos">Select photos</string>
    <string name="message_facebookLogin">You will need to sign-in to your Facebook account in order to use your albums</string>
    <string name="label_connectToFacebook">Connect to facebook</string>
    <string name="message_facebookLoginFailed">Facebook login failed</string>
    <string name="label_messageNoInternetError">No internet available</string>
    <string name="message_facebookAlbumsError">Error while retrieving facebook albums</string>
    <string name="label_facebookAlbum_upload">Upload</string>
    <string name="title_alertDialog_onBackPressed_emptyYourSelection">Empty your selection</string>
    <string name="message_alertDialog_onBackPressed_emptyYourSelection">Going back to home screen will empty your selection.\nAre you sure?</string>
    <string name="label_confirm">Confirm</string>

    <plurals name="selectedPhotos">
        <item quantity="one">selected photo</item>
        <item quantity="other">selected photos</item>
    </plurals>

    <string name="hint_addText">Add Text</string>

    <string name="title_alertDialog_lowPpi">Image Quality</string>
    <string name="message_alertDialog_lowPpi">This image may appear blurry when printed. You may want to replace it with a higher image quality image.</string>
    <string name="close">Close</string>

    <string name="label_edit">Edit</string>

    <string name="title_alertDialog_onCartProductDelete"></string>
    <string name="message_alertDialog_onCartProductDelete">Are you sure you want to delete this item?</string>
    <string name="label_total">Total</string>
    <string name="label_addProduct">Add Product</string>
    <string name="label_checkout">Checkout</string>
    <string name="label_add">Add</string>
    <string name="label_cancel">Cancel</string>

    <string name="name_item_landscape">Landscape</string>
    <string name="label_pressToAdd">Press to add</string>
    <string name="label_coverPhoto">Cover\nphoto</string>
    <string name="label_addPages">Add Pages</string>
    <string name="label_removePages">Remove Pages</string>

    <string name="edit">Edit</string>
    <string name="sp_ok_NORMAL">OK</string>
    <string name="sp_cancel_SHORT">Cancel</string>
    <string name="label_remove">Remove</string>
    <string name="label_caption">Caption</string>
    <string name="label_collage">Collage</string>

    <string name="name_item_poster_24">Mosaic 24 photos</string>
    <string name="name_item_poster_36">Mosaic 36 photos</string>
    <string name="name_item_poster_classic_regular">Classic regular</string>
    <string name="name_item_poster_classic_square">Classic square</string>
    <string name="message_required_number_of_photos">Select %d photos</string>
    <string name="message_required_number_of_photos_limit">You selected maximum number of photos</string>

    <!-- Login -->
    <string name="hint_firstname">First name</string>
    <string name="hint_lastname">Last name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="label_forgot_password">Forgot password?</string>
    <string name="label_login">Login</string>
    <string name="label_register">Register</string>
    <string name="label_login_buttons">Login with email and password</string>
    <string name="label_register_buttons">Register with your name, email and password</string>
    <string name="label_button_sign_in">Sign in</string>
    <string name="label_button_create_account">Create account</string>

    <!--Checkout-->
    <string name="screenTitle_checkoutActivity">Checkout</string>
    <string name="label_contact_person">Contact person</string>
    <string name="label_delivery_address">Delivery address</string>
    <string name="label_delivery_method">Delivery method</string>
    <string name="hint_full_name">Name and surname</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_city_and_county">City and county</string>
    <string name="label_delivery_method_express">Express</string>
    <string name="label_delivery_method_club">Club</string>

</resources>