<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_toolbar"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/material_padding"
            android:text="@string/label_contact_person"
            android:textColor="@color/black"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/material_padding">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/hint_full_name"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:maxLines="1"
                        android:textSize="14sp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/hint_phone_number"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:maxLines="1"
                        android:textSize="14sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/material_padding"
            android:text="@string/label_delivery_address"
            android:textColor="@color/black"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/material_padding">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/hint_address"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:maxLines="1"
                        android:textSize="14sp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_city_and_county"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/hint_city_and_county"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:maxLines="1"
                        android:textSize="14sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/material_padding"
            android:text="@string/label_delivery_method"
            android:textColor="@color/black"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/material_padding">

                <RadioGroup
                    android:id="@+id/rg_delivery_method"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rb_delivery_method_express"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_delivery_method_express"
                        app:buttonTint="@color/blue"/>

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rb_delivery_method_club"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/label_delivery_method_club"
                        app:buttonTint="@color/blue"/>
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/material_padding">

                <Button
                    android:id="@+id/btn_goto_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_select_pictures"
                    android:gravity="center"
                    android:text="@string/label_next"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>