<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/layout_toolbar"/>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        style="@style/CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:contentPadding="5dp">

        <LinearLayout
            android:id="@+id/layout_infos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/material_padding"
            android:paddingRight="@dimen/material_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/label_login_buttons"
                android:textColor="@color/blue"
                android:textSize="12sp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:maxLines="1"
                    android:textSize="18sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <eu.mobiletouch.fotoland.views.PasswordEditText_2
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:textSize="18sp"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txt_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="3dp"
                android:fontFamily="sans-serif"
                android:text="@string/label_forgot_password"/>

            <Button
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/btn_authenticate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/label_login"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btn_new_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/bt_light_gray"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/label_register"
        android:textColor="@color/white"
        android:layout_margin="15dp"
        android:textSize="16sp"/>

</LinearLayout>