<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_cartProducts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="100dp"
        tools:listItem="@layout/item_product"/>

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:padding="10dp"
        app:columnCount="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/label_total"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_columnWeight="1"/>

        <TextView
            android:id="@+id/tv_totalPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_columnWeight="1"
            tools:text="250 Lei"/>

        <Button
            android:id="@+id/btn_addProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_addProduct"
            app:layout_columnWeight="1"/>

        <Button
            android:id="@+id/btn_checkout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_checkout"
            app:layout_columnWeight="1"/>

    </android.support.v7.widget.GridLayout>

</FrameLayout>