<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/button_layer"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="?android:dividerHorizontal"/>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal"
        android:visibility="visible">

        <Space
            android:layout_width="0.0dip"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr">

            <Button
                android:id="@+id/selection_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="@dimen/command_bar_button_max_width"
                android:singleLine="true"
                android:text="@string/sp_cancel_SHORT"/>

            <Button
                android:id="@+id/selection_neutral"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="@dimen/command_bar_button_max_width"
                android:singleLine="true"
                android:text="@string/edit"
                android:visibility="gone"/>

            <Button
                android:id="@+id/selection_ok"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="@dimen/command_bar_button_max_width"
                android:singleLine="true"
                android:text="@string/sp_ok_NORMAL"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>